--- a/scenarioA/services/my-account/using-your-msca.html
+++ b/scenarioA/services/my-account/using-your-msca.html
@@ -339,14 +339,14 @@ My Service Canada Account (MSCA): Using your MSCA</h1>
 <div class="row">
 <ul class="toc lst-spcd col-md-12">
 
-<li class="col-md-4 col-sm-6"><a class="list-group-item" href="https://www.canada.ca/en/employment-social-development/services/my-account.html">1. Overview</a></li>
+<li class="col-md-4 col-sm-6"><a class="list-group-item" href="https://htmlpreview.github.io/?https://github.com/eclivingstone23/MSCA-Prototype/blob/master/scenarioA/services/my-account/overview.html">1. Overview</a></li>
 <!--
-<li class="col-md-4 col-sm-6"><a class="list-group-item" href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/using.html">2. Using your MSCA</a></li>
+<li class="col-md-4 col-sm-6"><a class="list-group-item" href="https://htmlpreview.github.io/?https://github.com/eclivingstone23/MSCA-Prototype/blob/master/scenarioA/services/my-account/using-your-msca.html">2. Using your MSCA</a></li>
 -->
 <li class="col-md-4 col-sm-6"><a class="list-group-item active">2. Using your MSCA</a></li>	
-<li class="col-md-4 col-sm-6 clr-lft-sm"><a class="list-group-item" href="https://www.canada.ca/en/employment-social-development/services/my-account/how-to-access.html">3. How to access MSCA</a></li>
-<li class="col-md-4 col-sm-6 clr-lft-md clr-lft-lg"><a class="list-group-item" href="https://www.canada.ca/en/employment-social-development/services/my-account/access.html">4. Access MSCA</a></li>
-<li class="col-md-4 col-sm-6 clr-lft-sm"><a class="list-group-item" href="https://www.canada.ca/en/employment-social-development/services/my-account/contact-us.html">Contact us</a></li>
+<li class="col-md-4 col-sm-6 clr-lft-sm"><a class="list-group-item" href="https://htmlpreview.github.io/?https://github.com/eclivingstone23/MSCA-Prototype/blob/master/scenarioA/services/my-account/how-to-access-msca.html">3. How to access MSCA</a></li>
+<li class="col-md-4 col-sm-6 clr-lft-md clr-lft-lg"><a class="list-group-item" href="https://htmlpreview.github.io/?https://github.com/eclivingstone23/MSCA-Prototype/blob/master/scenarioA/services/my-account/access-msca.html">4. Access MSCA</a></li>
+<li class="col-md-4 col-sm-6 clr-lft-sm"><a class="list-group-item" href="https://htmlpreview.github.io/?https://github.com/eclivingstone23/MSCA-Prototype/blob/master/scenarioA/services/my-account/contact-us.html">Contact us</a></li>
 </ul>
 </div>
 </div>
