--- a/scenarioA/services/my-account/how-to-access-msca.html
+++ b/scenarioA/services/my-account/how-to-access-msca.html
@@ -383,7 +383,7 @@ My Service Canada Account (MSCA): How to access MSCA </h1>
 <li class="col-sm-4">
 	<div class="row">
 		<div class="col-sm-8 col-sm-offset-2">
-		<a class="center-block" href="#a3-2"><img class="img-responsive center-block" src="/content/dam/esdc-edsc/images/services/msca-mdsc/msca-letter-icon.png" alt="">Request a PAC</a>
+		<a class="center-block" href="#a3-2"><img class="img-responsive center-block" src="https://www.canada.ca/content/dam/esdc-edsc/images/services/msca-mdsc/msca-letter-icon.png" alt="">Request a PAC</a>
 		</div>
 		<div class="col-sm-2">
 		<img class="img-responsive center-block" src="https://www.canada.ca/content/dam/esdc-edsc/images/services/msca-mdsc/msca-u212.png" alt="">
