--- a/scenarioA/services/my-account/using-your-msca.html
+++ b/scenarioA/services/my-account/using-your-msca.html
@@ -148,7 +148,7 @@
 		<div class="row">
 			<div class="brand col-xs-5 col-md-4" property="publisher" typeof="GovernmentOrganization">
 				<a href="/en.html" property="url">
-                    <img src="/etc/designs/canada/wet-boew/assets/sig-blk-en.svg" alt="" property="logo">
+                    <img src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/sig-blk-en.svg" alt="" property="logo">
                     <span class="wb-inv" property="name"> Government of Canada</span>
                 </a>
                 <meta property="areaServed" typeof="Country" content="Canada"/>
@@ -157,7 +157,7 @@
 			<section id="wb-srch" class="col-lg-8 text-right">
 				<h2>Search</h2>
 				
-<form action="/en/sr/srb.html" method="get" name="cse-search-box" role="search" class="form-inline">
+<form action="https://www.canada.ca/en/sr/srb.html" method="get" name="cse-search-box" role="search" class="form-inline">
 <div class="form-group">
 <label for="wb-srch-q" class="wb-inv">Search Canada.ca</label>
 <input name="cdn" value="canada" type="hidden"/>
