--- a/scenarioA/services/my-account/how-to-access-msca.html
+++ b/scenarioA/services/my-account/how-to-access-msca.html
@@ -478,7 +478,7 @@ My Service Canada Account (MSCA): How to access MSCA </h1>
 <h5>Online</h5>	
 <p>This online service allows you to request a personal access code (PAC). Once you have made your PAC request, we will mail it to you at the address we have on file (it will arrive in the mail within 5 to10 business days).</p>
 
-<a class="btn btn-primary" href="https://www.canada.ca/en/employment-social-development/services/my-account/request-pac.html">Request a PAC online</a>
+<a class="btn btn-primary" href="https://htmlpreview.github.io/?https://github.com/eclivingstone23/MSCA-Prototype/blob/master/scenarioA/services/my-account/request-pac.html">Request a PAC online</a>
 </section>
 
 <section>
