--- a/scenarioA/services/my-account/find-service-canada-office.html
+++ b/scenarioA/services/my-account/find-service-canada-office.html
@@ -3,7 +3,7 @@
 <!--
 INPUTS:
 scwasi.server=https://www.canada.ca
-scwasi.vpath=https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn
+scwasi.vpath=https://www.servicecanada.gc.ca/etc/designs/canada/cdts/gcweb/rn
 scwasi.cdn.env=prod
 isEn=true
 
@@ -17,7 +17,7 @@ isEn=true
 <head>
     <meta charset="utf-8">
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
-		https://www.canada.ca/wet-boew.github.io/wet-boew/License-en.html / https://www.canada.ca/wet-boew.github.io/wet-boew/Licence-fr.html -->
+		wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
     <title>Find a Service Canada Office</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
@@ -50,21 +50,21 @@ isEn=true
     </script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="https://www.canada.ca/tbsc-fsco/css/fsco-app-css.css" />
-	<link rel="stylesheet" href="https://www.canada.ca/profiles/styles/servcan-app-fsco.css" />        
+    <link rel="stylesheet" href="https://www.servicecanada.gc.ca/tbsc-fsco/css/fsco-app-css.css" />
+	<link rel="stylesheet" href="https://www.servicecanada.gc.ca/profiles/styles/servcan-app-fsco.css" />        
       
 </head>
 
 <body vocab="http://schema.org/" typeof="WebPage">
 	
-	<noscript><iframe title="Google Tag Manager" src="//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<noscript><iframe title="Google Tag Manager" src="https://www.servicecanada.gc.ca//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager -->
 
     <div id="def-top">
 		<!-- Write closure fall-back static file -->
 		<!-- /ROOT/etc/designs/canada/cdts/gcweb/rn/static/top-en.html -->
 		<!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
-<noscript><iframe title="Google Tag Manager" src="//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript><iframe title="Google Tag Manager" src="https://www.servicecanada.gc.ca//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager -->
     <ul id="wb-tphp">
         <li class="wb-slc">
@@ -374,9 +374,9 @@ isEn=true
                     <section>
                         <h3>Contact information</h3>
                         <ul class="list-unstyled">
-                            <li><a href="https://www.canada.ca/en/contact/index.html#aat">Most asked-about topics</a></li>
-							<li><a href="https://www.canada.ca/en/contact/index.html#spe">Specialized enquiries</a></li>
-							<li><a href="https://www.canada.ca/en/contact/index.html#gen">General enquiries</a></li>
+                            <li><a href="https://www.servicecanada.gc.ca/en/contact/index.html#aat">Most asked-about topics</a></li>
+							<li><a href="/en/contact/index.html#spe">Specialized enquiries</a></li>
+							<li><a href="/en/contact/index.html#gen">General enquiries</a></li>
                         </ul>
                     </section>
                     <section>
