--- a/scenarioA/services/my-account/find-service-canada-office.html
+++ b/scenarioA/services/my-account/find-service-canada-office.html
@@ -50,8 +50,8 @@ isEn=true
     </script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="https://www.servicecanada.gc.ca/tbsc-fsco/css/fsco-app-css.css" />
-	<link rel="stylesheet" href="https://www.servicecanada.gc.ca/profiles/styles/servcan-app-fsco.css" />        
+    <link rel="stylesheet" href="https://www.canada.ca/tbsc-fsco/css/fsco-app-css.css" />
+	<link rel="stylesheet" href="https://www.canada.ca/profiles/styles/servcan-app-fsco.css" />        
       
 </head>
 
