--- a/scenarioA/services/my-account/find-service-canada-office.html
+++ b/scenarioA/services/my-account/find-service-canada-office.html
@@ -3,7 +3,7 @@
 <!--
 INPUTS:
 scwasi.server=https://www.canada.ca
-scwasi.vpath=https://www.servicecanada.gc.ca/etc/designs/canada/cdts/gcweb/rn
+scwasi.vpath=https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn
 scwasi.cdn.env=prod
 isEn=true
 
