--- a/scenarioA/services/my-account/how-to-access-msca.html
+++ b/scenarioA/services/my-account/how-to-access-msca.html
@@ -486,7 +486,7 @@ My Service Canada Account (MSCA): How to access MSCA </h1>
 
 <p>By requesting a PAC in person, on site agents will help you receive your PAC immediately and answer any questions you may have.</p>	
 	
-<a class="btn btn-primary" href="http://www.servicecanada.gc.ca/tbsc-fsco/sc-hme.jsp?lang=eng">Find a Service Canada Office</a>
+<a class="btn btn-primary" href="https://htmlpreview.github.io/?https://github.com/eclivingstone23/MSCA-Prototype/blob/master/scenarioA/services/my-account/find-service-canada-office.html">Find a Service Canada Office</a>
 </section>
 <section>
 <h5>By phone</h5>
@@ -560,7 +560,7 @@ My Service Canada Account (MSCA): How to access MSCA </h1>
 	
 </details>	
 	
-<a class="btn btn-primary" href="https://www.canada.ca/en/employment-social-development/services/my-account/access.html">Register your MSCA</a>		
+<a class="btn btn-primary" href="https://htmlpreview.github.io/?https://github.com/eclivingstone23/MSCA-Prototype/blob/master/scenarioA/services/my-account/access-msca.html">Register your MSCA</a>		
 	
 </section>	
 
