--- a/scenarioA/services/my-account/access.html
+++ b/scenarioA/services/my-account/access.html
@@ -345,12 +345,12 @@ My Service Canada Account (MSCA): Access MSCA</h1>
     <div class="gc-stp-stp">
 <div class="row">
 <ul class="toc lst-spcd col-md-12">
-<li class="col-md-4 col-sm-6"><a class="list-group-item" href="/overview.html">1. Overview</a></li>
-<li class="col-md-4 col-sm-6"><a class="list-group-item" href="/using.html">2. Using your MSCA</a></li>
-<li class="col-md-4 col-sm-6 clr-lft-sm"><a class="list-group-item" href="https:/how-to-access.html">3. How to access MSCA</a></li>
+<li class="col-md-4 col-sm-6"><a class="list-group-item" href="/MSCA-Prototype/scenarioA/services/my-account/overview.html">1. Overview</a></li>
+<li class="col-md-4 col-sm-6"><a class="list-group-item" href="/MSCA-Prototype/scenarioA/services/my-account/using.html">2. Using your MSCA</a></li>
+<li class="col-md-4 col-sm-6 clr-lft-sm"><a class="list-group-item" href="/MSCA-Prototype/scenarioA/services/my-account/how-to-access.html">3. How to access MSCA</a></li>
 <li class="col-md-4 col-sm-6 clr-lft-md clr-lft-lg"><a class="list-group-item active">4. Access MSCA</a></li>
-<!--<li class="col-md-4 col-sm-6 clr-lft-md clr-lft-lg"><a class="list-group-item" href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/access.html">4. Access MSCA</a></li>-->
-<li class="col-md-4 col-sm-6 clr-lft-sm"><a class="list-group-item" href="/contact-us.html">Contact us</a></li>
+<!--<li class="col-md-4 col-sm-6 clr-lft-md clr-lft-lg"><a class="list-group-item" href="/MSCA-Prototype/scenarioA/services/my-account/access.html">4. Access MSCA</a></li>-->
+<li class="col-md-4 col-sm-6 clr-lft-sm"><a class="list-group-item" href="/MSCA-Prototype/scenarioA/services/my-account/contact-us.html">Contact us</a></li>
 </ul>
 </div>
 </div>
@@ -481,20 +481,20 @@ My Service Canada Account (MSCA): Access MSCA</h1>
 <nav role="navigation" class="mrgn-bttm-lg">
 <h3 class="wb-inv">Document navigation</h3>
 <ul class="pager">
-<li class="previous"><a href="https://www.canada.ca/en/employment-social-development/services/my-account/how-to-access.html" rel="prev">Previous<span class="wb-inv">: 3. How to access MSCA</span></a></li>	
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/how-to-access.html" rel="prev">Previous<span class="wb-inv">: 3. How to access MSCA</span></a></li>	
 <!--	
-<li class="previous"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account.html" rel="prev">Previous<span class="wb-inv">: 1. Overview</span></a></li>	
-<li class="previous"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/using.html" rel="prev">Previous<span class="wb-inv">: 2. Using your MSCA</span></a></li>	
-<li class="previous"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/how-to-access.html" rel="prev">Previous<span class="wb-inv">: 3. How to access MSCA</span></a></li>
-<li class="previous"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/access.html" rel="prev">Previous<span class="wb-inv">: 4. Access MSCA</span></a></li>
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/my-account.html" rel="prev">Previous<span class="wb-inv">: 1. Overview</span></a></li>	
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/using.html" rel="prev">Previous<span class="wb-inv">: 2. Using your MSCA</span></a></li>	
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/how-to-access.html" rel="prev">Previous<span class="wb-inv">: 3. How to access MSCA</span></a></li>
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/access.html" rel="prev">Previous<span class="wb-inv">: 4. Access MSCA</span></a></li>
 -->
 	
-<li class="next"><a href="https://www.canada.ca/en/employment-social-development/services/my-account/contact-us.html" rel="next">Next<span class="wb-inv">: Contact us</span></a></li>	
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/contact-us.html" rel="next">Next<span class="wb-inv">: Contact us</span></a></li>	
 <!--
-<li class="next"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/using.html" rel="next">Next<span class="wb-inv">: 2. Using your MSCA</span></a></li>
-<li class="next"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/how-to-access.html" rel="next">Next<span class="wb-inv">: 3. How to access MSCA</span></a></li>
-<li class="next"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/access.html" rel="next">Next<span class="wb-inv">: 4. Access MSCA</span></a></li>
-<li class="next"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/contact-us.html" rel="next">Next<span class="wb-inv">: Contact us</span></a></li>	
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/using.html" rel="next">Next<span class="wb-inv">: 2. Using your MSCA</span></a></li>
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/how-to-access.html" rel="next">Next<span class="wb-inv">: 3. How to access MSCA</span></a></li>
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/access.html" rel="next">Next<span class="wb-inv">: 4. Access MSCA</span></a></li>
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/contact-us.html" rel="next">Next<span class="wb-inv">: Contact us</span></a></li>	
 -->
 </ul>
 </nav>	
