--- a/scenarioA/services/my-account/using.html
+++ b/scenarioA/services/my-account/using.html
@@ -679,17 +679,17 @@ My Service Canada Account (MSCA): Using your MSCA</h1>
 <ul class="pager">
 <li class="previous"><a href="https://www.canada.ca/en/employment-social-development/services/my-account.html" rel="prev">Previous<span class="wb-inv">: 1. Overview</span></a></li>	
 <!--	
-<li class="previous"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account.html" rel="prev">Previous<span class="wb-inv">: 1. Overview</span></a></li>	
-<li class="previous"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/using.html" rel="prev">Previous<span class="wb-inv">: 2. Using your MSCA</span></a></li>	
-<li class="previous"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/how-to-access.html" rel="prev">Previous<span class="wb-inv">: 3. How to access MSCA</span></a></li>
-<li class="previous"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/access.html" rel="prev">Previous<span class="wb-inv">: 4. Access MSCA</span></a></li>
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account.html" rel="prev">Previous<span class="wb-inv">: 1. Overview</span></a></li>	
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/using.html" rel="prev">Previous<span class="wb-inv">: 2. Using your MSCA</span></a></li>	
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/how-to-access.html" rel="prev">Previous<span class="wb-inv">: 3. How to access MSCA</span></a></li>
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/access.html" rel="prev">Previous<span class="wb-inv">: 4. Access MSCA</span></a></li>
 -->
 <li class="next"><a href="https://www.canada.ca/en/employment-social-development/services/my-account/how-to-access.html" rel="next">Next<span class="wb-inv">: 3. How to access MSCA</span></a></li>	
 <!--	
-<li class="next"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/using.html" rel="next">Next<span class="wb-inv">: 2. Using your MSCA</span></a></li>\	
-<li class="next"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/how-to-access.html" rel="next">Next<span class="wb-inv">: 3. How to access MSCA</span></a></li>	
-<li class="next"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/access.html" rel="next">Next<span class="wb-inv">: 4. Access MSCA</span></a></li>
-<li class="next"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/contact-us.html" rel="next">Next<span class="wb-inv">: Contact us</span></a></li>	
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/using.html" rel="next">Next<span class="wb-inv">: 2. Using your MSCA</span></a></li>\	
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/how-to-access.html" rel="next">Next<span class="wb-inv">: 3. How to access MSCA</span></a></li>	
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/access.html" rel="next">Next<span class="wb-inv">: 4. Access MSCA</span></a></li>
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/contact-us.html" rel="next">Next<span class="wb-inv">: Contact us</span></a></li>	
 -->
 </ul>
 </nav>	
@@ -711,7 +711,7 @@ My Service Canada Account (MSCA): Using your MSCA</h1>
     <div class="gc-rprt-prblm-frm gc-rprt-prblm-tggl">			
 			<form id="gc-rprt-prblm-form" action="/gc/services/generateemail" method="post">
             <input type="hidden" name="pageTitle" value="My Service Canada Account (MSCA): Using your MSCA">
-            <input type="hidden" name="submissionPage" value="/content/canadasite/en/employment-social-development/services/my-account/using.html">
+            <input type="hidden" name="submissionPage" value="/MSCA-Prototype/scenarioA/services/my-account/using.html">
             <input type="hidden" name="lang" value="en">
             <input type="hidden" name="pageOwner" value="gc:institutions/department-of-employment-and-social-development">
             <input id="emailTemplate" name="emailTemplate" type="hidden" value="reportaproblem/rap"> 
