--- a/scenarioA/services/my-account/contact-us.html
+++ b/scenarioA/services/my-account/contact-us.html
@@ -339,7 +339,7 @@ My Service Canada Account (MSCA): Contact us</h1>
 <li class="col-md-4 col-sm-6 clr-lft-sm"><a class="list-group-item" href="https://htmlpreview.github.io/?https://github.com/eclivingstone23/MSCA-Prototype/blob/master/scenarioA/services/my-account/how-to-access-msca.html">3. How to access MSCA</a></li>
 <li class="col-md-4 col-sm-6 clr-lft-md clr-lft-lg"><a class="list-group-item" href="https://htmlpreview.github.io/?https://github.com/eclivingstone23/MSCA-Prototype/blob/master/scenarioA/services/my-account/access-msca.html">4. Access MSCA</a></li>
 <li class="col-md-4 col-sm-6"><a class="list-group-item active">Contact us</a></li>
-<!--<li class="col-md-4 col-sm-6 clr-lft-sm"><a class="list-group-item" href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/contact-us.html">Contact us</a></li>-->
+<!--<li class="col-md-4 col-sm-6 clr-lft-sm"><a class="list-group-item" href="/MSCA-Prototype/scenarioA/services/my-account/contact-us.html">Contact us</a></li>-->
 </ul>
 </div>
 </div>
@@ -363,18 +363,18 @@ My Service Canada Account (MSCA): Contact us</h1>
 <ul class="pager">
 <li class="previous"><a href="https://www.canada.ca/en/employment-social-development/services/my-account/access.html" rel="prev">Previous<span class="wb-inv">: 4. Access MSCA</span></a></li>	
 <!--	
-<li class="previous"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account.html" rel="prev">Previous<span class="wb-inv">: 1. Overview</span></a></li>	
-<li class="previous"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/using.html" rel="prev">Previous<span class="wb-inv">: 2. Using your MSCA</span></a></li>	
-<li class="previous"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/how-to-access.html" rel="prev">Previous<span class="wb-inv">: 3. How to access MSCA</span></a></li>
-<li class="previous"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/access.html" rel="prev">Previous<span class="wb-inv">: 4. Access MSCA</span></a></li>
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account.html" rel="prev">Previous<span class="wb-inv">: 1. Overview</span></a></li>	
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/using.html" rel="prev">Previous<span class="wb-inv">: 2. Using your MSCA</span></a></li>	
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/how-to-access.html" rel="prev">Previous<span class="wb-inv">: 3. How to access MSCA</span></a></li>
+<li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/access.html" rel="prev">Previous<span class="wb-inv">: 4. Access MSCA</span></a></li>
 -->
 	
 
 <!--
-<li class="next"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/using.html" rel="next">Next<span class="wb-inv">: 2. Using your MSCA</span></a></li>
-<li class="next"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/how-to-access.html" rel="next">Next<span class="wb-inv">: 3. How to access MSCA</span></a></li>
-<li class="next"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/access.html" rel="next">Next<span class="wb-inv">: 4. Access MSCA</span></a></li>
-<li class="next"><a href="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/contact-us.html" rel="next">Next<span class="wb-inv">: Contact us</span></a></li>	
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/using.html" rel="next">Next<span class="wb-inv">: 2. Using your MSCA</span></a></li>
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/how-to-access.html" rel="next">Next<span class="wb-inv">: 3. How to access MSCA</span></a></li>
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/access.html" rel="next">Next<span class="wb-inv">: 4. Access MSCA</span></a></li>
+<li class="next"><a href="/MSCA-Prototype/scenarioA/services/my-account/contact-us.html" rel="next">Next<span class="wb-inv">: Contact us</span></a></li>	
 -->
 </ul>
 </nav>	</section>
@@ -395,7 +395,7 @@ My Service Canada Account (MSCA): Contact us</h1>
     <div class="gc-rprt-prblm-frm gc-rprt-prblm-tggl">			
 			<form id="gc-rprt-prblm-form" action="/gc/services/generateemail" method="post">
             <input type="hidden" name="pageTitle" value="My Service Canada Account (MSCA): Contact us">
-            <input type="hidden" name="submissionPage" value="https://www.canada.ca/content/canadasite/en/employment-social-development/services/my-account/contact-us.html">
+            <input type="hidden" name="submissionPage" value="/MSCA-Prototype/scenarioA/services/my-account/contact-us.html">
             <input type="hidden" name="lang" value="en">
             <input type="hidden" name="pageOwner" value="gc:institutions/department-of-employment-and-social-development">
             <input id="emailTemplate" name="emailTemplate" type="hidden" value="reportaproblem/rap"> 
