--- a/scenarioA/services/my-account/contact-us.html
+++ b/scenarioA/services/my-account/contact-us.html
@@ -247,7 +247,7 @@
       <nav role="navigation" class="mrgn-bttm-lg">
         <h3 class="wb-inv">Document navigation</h3>
         <ul class="pager">
-          <li class="previous"><a href="https://www.canada.ca/en/employment-social-development/services/my-account/access.html" rel="prev">Previous<span class="wb-inv">: 4. Access MSCA</span></a></li>
+          <li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/access.html" rel="prev">Previous<span class="wb-inv">: 4. Access MSCA</span></a></li>
           <!--	
 <li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account.html" rel="prev">Previous<span class="wb-inv">: 1. Overview</span></a></li>	
 <li class="previous"><a href="/MSCA-Prototype/scenarioA/services/my-account/using.html" rel="prev">Previous<span class="wb-inv">: 2. Using your MSCA</span></a></li>	
