--- a/scenarioA/services/my-account/access.html
+++ b/scenarioA/services/my-account/access.html
@@ -264,7 +264,7 @@
                   </div>
                   <div class="hidden-xs col-sm-4"><img class="img-responsive center-block" src="https://www.canada.ca/content/dam/esdc-edsc/images/services/msca-mdsc/madi-logo.png" alt=""></div>
                 </div>
-                <a class="btn btn-primary" href="https://www.canada.ca/en/employment-social-development/services/my-account/privacy-notice-term-conditions.html">Continue to MyAlberta Digital ID </a> </div>
+                <a class="btn btn-primary" href="/MSCA-Prototype/scenarioA/services/my-account/privacy-notice-term-conditions.html">Continue to MyAlberta Digital ID </a> </div>
             </section>
             <section class="panel panel-default">
               <div class="panel-heading">
@@ -282,7 +282,7 @@
                   </div>
                   <div class="hidden-xs col-sm-4"><img class="img-responsive center-block" src="https://www.canada.ca/content/dam/canada/employment-social-development/migration/images/assets/portfolio/docs/en/ei/roe/access_roe/partners-logo.png" alt="Sign-in Partners"></div>
                 </div>
-                <a class="btn btn-primary" href="https://srv136.services.gc.ca/ecas-seca/rascl/Initialize.aspx?Lang=eng&amp;Idp=https://services.securekeyconcierge.com/cbs&amp;AppCode=MSCA_SC">Continue to Sign-In Partner</a>
+                <a class="btn btn-primary" href="/MSCA-Prototype/scenarioA/services/my-account/sign-in-partner/sign-in.html">Continue to Sign-In Partner</a>
                 <details>
                   <summary>View the full list of Sign-in Partners</summary>
                   <ul>
@@ -312,7 +312,7 @@
                   <li>Your GCKey user ID can be used to access other Government of Canada departments and agencies. GCKey user IDs created on other federal government sites can be used on ESDC/Service Canada.</li>
                   <li>If you have forgotten an existing GCKey user ID you will need to create a new one.</li>
                 </ul>
-                <a class="btn btn-primary" href="https://srv136.services.gc.ca/ecas-seca/rascl/Initialize.aspx?Lang=eng&amp;Idp=https://clegc-gckey.gc.ca&amp;AppCode=MSCA_SC">Continue to GCKey</a> </div>
+                <a class="btn btn-primary" href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-in.html">Continue to GCKey</a> </div>
             </section>
           </div>
         </section>
