--- a/scenarioA/services/my-account/GCKey/sign-in.html
+++ b/scenarioA/services/my-account/GCKey/sign-in.html
@@ -149,7 +149,7 @@
                       <li style="list-style: none">One username.</li>
                       <li style="list-style: none">One password.</li>
                     </ul>
-                    <p style="text-align:center; margin-top: 20px; margin-bottom: 20px;"><a href="/MSCBA-Prototype/record-of-employment/sign-in/GCKey/sign-up-ts%26cs.html" class="btn btn-primary" style="width: 13em;" title="Sign Up / Register for a new GCKey">Sign Up</a></p>
+                    <p style="text-align:center; margin-top: 20px; margin-bottom: 20px;"><a href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-up-step-1.html" class="btn btn-primary" style="width: 13em;" title="Sign Up / Register for a new GCKey">Sign Up</a></p>
                     <p>Your GCKey can be used to access multiple Government of Canada online <a href="ES-01?ReqID=S286A1F6398A48F86EF30A053D2FD72EB181C5721F" target="_blank" title="Enabled Services (opens in a new window)">Enabled Services</a>.</p>
                   </div>
                 </div>
