--- a/scenarioA/services/my-account/GCKey/sign-in.html
+++ b/scenarioA/services/my-account/GCKey/sign-in.html
@@ -135,7 +135,7 @@
                         <div style="text-align:center;">
                           <button type="submit" class="btn btn-primary" title="Connect to the GCKey service" style="margin-left:auto; margin-right:auto;">Sign In</button>
                           <input type="submit" class="btn btn-default cancel" name="clearAll" id="button2" value="Clear All" title="Information entered will be cleared" style="margin-left:auto; margin-right:auto;"/>
-                          <a class="btn btn-primary" style="margin: 5px; margin-left:auto; margin-right:auto" title="Sign Up / Register for a new GCKey" href="/MSCA-Prototype/scenarioA/services/my-account/GCKey/sign-up-step-1.html">Sign Up</a> </div>
+                          </div>
                       </div>
                     </form>
                   </div>
