--- a/scenarioA/services/my-account/GCKey/sign-up-complete.html
+++ b/scenarioA/services/my-account/GCKey/sign-up-complete.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 9]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if gte IE 9 | !IE]><!-->
@@ -7,9 +6,6 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta charset="utf-8" />
-
-
-
 
 <!-- RG-05 1.2.4 -->
 <title>GCKey - Sign Up Complete</title>
@@ -44,110 +40,98 @@
 </head>
 <body>
 <ul id="wb-tphp">
- <li class="wb-slc"><a class="wb-sl" href="#wb-cont">Skip to main content</a></li>
- <li class="wb-slc visible-md visible-lg"><a class="wb-sl" href="#wb-info">Skip to footer</a></li>
+  <li class="wb-slc"><a class="wb-sl" href="#wb-cont">Skip to main content</a></li>
+  <li class="wb-slc visible-md visible-lg"><a class="wb-sl" href="#wb-info">Skip to footer</a></li>
 </ul>
 <header role="banner">
-
-
-<div id="wb-bnr" class="container">
- <div id="wb-lng" class="visible-md visible-lg text-right">
-  <h2 class="wb-inv">Language selection</h2>
-  <div class="row">
-   <div class="col-md-12">
-    <ul class="list-inline margin-bottom-none">
-     <li><a lang="fr" href='https://clegc-gckey.gc.ca/j/fra/rg?execution=e2s5&amp;_eventId=changeLang'>Fran&ccedil;ais</a></li>
-    </ul>
-   </div>
+  <div id="wb-bnr" class="container">
+    <div id="wb-lng" class="visible-md visible-lg text-right">
+      <h2 class="wb-inv">Language selection</h2>
+      <div class="row">
+        <div class="col-md-12">
+          <ul class="list-inline margin-bottom-none">
+            <li><a lang="fr" href='https://clegc-gckey.gc.ca/j/fra/rg?execution=e2s5&amp;_eventId=changeLang'>Fran&ccedil;ais</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="brand col-xs-7 col-sm-9"> <a href="http://canada.ca/en/index.html" target="_blank" title="Welcome to Canada.ca (opens in a new window)">
+        <object id="gcwu-sig" type="image/svg+xml" tabindex="-1" role="img" data="https://clegc-gckey.gc.ca/j/wet/assets/sig-blk-en.svg" aria-label="Government of Canada">
+        </object>
+        </a> </div>
+      <div class="wb-mb-links col-xs-5 col-sm-3 visible-sm visible-xs" id="wb-glb-mn">
+        <h2 class="wb-inv">Menu</h2>
+        <ul class="list-inline text-right chvrn">
+          <li><a href="#mb-pnl" title="Menu" aria-controls="mb-pnl" class="overlay-lnk" role="button"> <span class="glyphicon glyphicon-th-list"> <span class="wb-inv">Menu</span> </span> </a></li>
+        </ul>
+        <div id="mb-pnl"></div>
+      </div>
+    </div>
   </div>
- </div>
- <div class="row">
-  <div class="brand col-xs-7 col-sm-9">
-   <a href="http://canada.ca/en/index.html" target="_blank" title="Welcome to Canada.ca (opens in a new window)">
-    <object id="gcwu-sig" type="image/svg+xml" tabindex="-1" role="img" data="https://clegc-gckey.gc.ca/j/wet/assets/sig-blk-en.svg" aria-label="Government of Canada"></object>
-   </a>
-  </div>
-  <div class="wb-mb-links col-xs-5 col-sm-3 visible-sm visible-xs" id="wb-glb-mn">
-   <h2 class="wb-inv">Menu</h2>
-   <ul class="list-inline text-right chvrn">
-    <li><a href="#mb-pnl" title="Menu" aria-controls="mb-pnl" class="overlay-lnk" role="button">
-     <span class="glyphicon glyphicon-th-list">
-      <span class="wb-inv">Menu</span>
-     </span>
-    </a></li>
-   </ul>
-   <div id="mb-pnl"></div>
-  </div>
- </div>
-</div>
-
-<nav role="navigation" id="wb-sm" class="wb-menu visible-md visible-lg" data-trgt="mb-pnl" typeof="SiteNavigationElement">
- <h2 class="wb-inv">Site menu</h2>
- <div class="container visible-md visible-lg nvbar">
-  <div class="row">
-   <ul class="list-inline menu">
-    <li><a href="DE-01?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44" target="_blank" title="Definitions (opens in a new window)">Definitions</a></li>
-    <li><a href="FQ-01?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44" target="_blank" title="Frequently Asked Questions (FAQs) (opens in a new window)">Frequently Asked Questions (FAQ)</a></li>
-    <li class="last"><a href="HP-01?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44#registering" target="_blank" title="Help (opens in a new window)">Help</a></li>
-   </ul>
-  </div>
- </div>
-</nav>
-<nav role="navigation" id="wb-bc" property="breadcrumb">
- <h2 class="wb-inv">You are here:</h2>
- <div class="container">
-  <div class="row">
-   <ol class="breadcrumb">
-<li><a href="https://clegc-gckey.gc.ca/j/eng/l?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44">Home</a></li>
-<li>GCKey Sign Up Complete</li>
-</ol>
-</div>
-</div>
-</nav>
+  <nav role="navigation" id="wb-sm" class="wb-menu visible-md visible-lg" data-trgt="mb-pnl" typeof="SiteNavigationElement">
+    <h2 class="wb-inv">Site menu</h2>
+    <div class="container visible-md visible-lg nvbar">
+      <div class="row">
+        <ul class="list-inline menu">
+          <li><a href="DE-01?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44" target="_blank" title="Definitions (opens in a new window)">Definitions</a></li>
+          <li><a href="FQ-01?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44" target="_blank" title="Frequently Asked Questions (FAQs) (opens in a new window)">Frequently Asked Questions (FAQ)</a></li>
+          <li class="last"><a href="HP-01?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44#registering" target="_blank" title="Help (opens in a new window)">Help</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <nav role="navigation" id="wb-bc" property="breadcrumb">
+    <h2 class="wb-inv">You are here:</h2>
+    <div class="container">
+      <div class="row">
+        <ol class="breadcrumb">
+          <li><a href="https://clegc-gckey.gc.ca/j/eng/l?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44">Home</a></li>
+          <li>GCKey Sign Up Complete</li>
+        </ol>
+      </div>
+    </div>
+  </nav>
 </header>
 <div class="container body-container">
- <main role="main" property="mainContentOfPage">
-  <div class="row">
-   <div class="col-xs-12">
-    <h1 id="wb-cont">GCKey Sign Up Complete</h1>
+  <main role="main" property="mainContentOfPage">
     <div class="row">
-     <div class="col-md-8">
-      <p class="visible-xs visible-sm">Please keep your Username secure. For more information on how your privacy is protected, please refer to our <a href="PS-01?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44" target="_blank" title="Personal Information Collection Statement (opens in a new window)">Personal Information Collection Statement</a>.</p>
-      <p>You have successfully created your GCKey.</p>
-      <p>Your Username is: rileysmith77</p>
-      <p style="margin-bottom: 20px;">
-       Please select <strong>Continue</strong> to leave the GCKey service and return to the Government of Canada online service.
-      </p>
-      <form id="form" autocomplete="off" method="post" action="https://clegc-gckey.gc.ca/j/eng/rg?execution=e2s5" onsubmit="return disableButton()">
-       <p style="text-align: center">
-       
-        <a class="btn btn-primary" title="Continue the process" name="_eventId_continue" id="continue" href="/MSCBA-Prototype/record-of-employment/ra-create-profile/RA-PNS-create-profile.html">Continue</a>
-      
-       </p>
-      </form>
-     </div>
-     <div class="col-md-4 hidden-sm hidden-xs">
-      <div class="panel panel-default">
-       <div class="panel-heading">
-        <h2 class="panel-title">Privacy</h2>
-       </div>
-       <div class="panel-body">
-        <p>Please keep your Username secure. For more information on how your privacy is protected, please refer to our <a href="PS-01?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44" target="_blank" title="Personal Information Collection Statement (opens in a new window)">Personal Information Collection Statement</a>.</p>
-       </div>
+      <div class="col-xs-12">
+        <h1 id="wb-cont">GCKey Sign Up Complete</h1>
+        <div class="row">
+          <div class="col-md-8">
+            <p class="visible-xs visible-sm">Please keep your Username secure. For more information on how your privacy is protected, please refer to our <a href="PS-01?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44" target="_blank" title="Personal Information Collection Statement (opens in a new window)">Personal Information Collection Statement</a>.</p>
+            <p>You have successfully created your GCKey.</p>
+            <p>Your Username is: rileysmith77</p>
+            <p style="margin-bottom: 20px;"> Please select <strong>Continue</strong> to leave the GCKey service and return to the Government of Canada online service. </p>
+            <form id="form" autocomplete="off" method="post" action="https://clegc-gckey.gc.ca/j/eng/rg?execution=e2s5" onsubmit="return disableButton()">
+              <p style="text-align: center"> <a class="btn btn-primary" title="Continue the process" name="_eventId_continue" id="continue" href="/MSCA-Prototype/scenarioA/services/my-account/R&A/privacy-notice-terms-and-conditions.html">Continue</a> </p>
+            </form>
+          </div>
+          <div class="col-md-4 hidden-sm hidden-xs">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h2 class="panel-title">Privacy</h2>
+              </div>
+              <div class="panel-body">
+                <p>Please keep your Username secure. For more information on how your privacy is protected, please refer to our <a href="PS-01?ReqID=S238C0A6D574BE970FC6B67F28AA00CB6C759F2F44" target="_blank" title="Personal Information Collection Statement (opens in a new window)">Personal Information Collection Statement</a>.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-     </div>
     </div>
-   </div>
-  </div>
-  <div class="pagedetails">
-   <div class="datemod">
-    <dl id="wb-dtmd" role="contentinfo">
-     <dt>Date modified:</dt>
-     <dd><time property="dateModified">2015-11-15</time></dd>
-    </dl>
-   </div>
-  </div>
- </main>
+    <div class="pagedetails">
+      <div class="datemod">
+        <dl id="wb-dtmd" role="contentinfo">
+          <dt>Date modified:</dt>
+          <dd>
+            <time property="dateModified">2015-11-15</time>
+          </dd>
+        </dl>
+      </div>
+    </div>
+  </main>
 </div>
 <footer role="contentinfo" id="wb-info">
   <nav role="navigation" class="container visible-lg visible-md wb-navcurr">
@@ -190,20 +174,19 @@
   <div class="brand">
     <div class="container">
       <div class="row ">
-        <div class="col-xs-6 col-sm-6 visible-sm visible-xs tofpg">
-          <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a>
-        </div>
+        <div class="col-xs-6 col-sm-6 visible-sm visible-xs tofpg"> <a href="#wb-cont">Top of Page <span class="glyphicon glyphicon-chevron-up"></span></a> </div>
         <div class="col-xs-6 col-sm-6 col-md-12 text-right">
-          <object id="wmms" type="image/svg+xml" tabindex="-1" role="img" data="https://clegc-gckey.gc.ca/j/wet/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
-       </div>
+          <object id="wmms" type="image/svg+xml" tabindex="-1" role="img" data="https://clegc-gckey.gc.ca/j/wet/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada">
+          </object>
+        </div>
       </div>
     </div>
   </div>
 </footer>
-<!--[if gte IE 9 | !IE ]><!-->
-<script src="https://clegc-gckey.gc.ca/j/js/jquery.min.js"></script>
-<script src="https://clegc-gckey.gc.ca/j/wet/js/wet-boew.min.js"></script>
-<!--<![endif]-->
+<!--[if gte IE 9 | !IE ]><!--> 
+<script src="https://clegc-gckey.gc.ca/j/js/jquery.min.js"></script> 
+<script src="https://clegc-gckey.gc.ca/j/wet/js/wet-boew.min.js"></script> 
+<!--<![endif]--> 
 <!--[if lt IE 9]>
 <script src="https://clegc-gckey.gc.ca/j/wet/js/ie8-wet-boew2.min.js"></script>
 <![endif]-->
