--- a/scenarioA/services/my-account/using.html
+++ b/scenarioA/services/my-account/using.html
@@ -200,10 +200,10 @@
 --> 
         
         <!-- Put code AFTER this / Whatever is below will be visisble -->
-        <section class="alert alert-warning">
+       <!-- <section class="alert alert-warning">
           <h2 class="h3">Attention: </h2>
           <p> Please be advised that this service will be unavailable from 8:00 p.m. to 10:00 p.m. on Friday, September 13, 2019 (Eastern Time) and from 8:00 a.m. to 10:00 a.m. on Saturday, September 14, 2019 (Eastern Time)] for system maintenance. We apologize for any inconvenience.</p>
-        </section>
+        </section>-->
         
         <!-- Put code BEFORE this / Whatever is above will be visible --> 
         <!--start of Alert row--> 
