--- a/scenarioA/services/my-account/MSCA/lobby-redesign.html
+++ b/scenarioA/services/my-account/MSCA/lobby-redesign.html
@@ -134,7 +134,7 @@
                     </div>
                     </div>
 					-->
-					  <h2>Service Canada account services</h2>
+					  <h2>Service Canada account ser</h2>
                   <div class="row" id="msca-tc">
                       <div class="col-xs-12">
                       <div class="wb-tabs">
