--- a/scenarioA/services/my-account/MSCA/lobby-redesign.html
+++ b/scenarioA/services/my-account/MSCA/lobby-redesign.html
@@ -134,7 +134,7 @@
                     </div>
                     </div>
 					-->
-					  <h2>Service Canada account ser</h2>
+					  <h2>Service Canada account services</h2>
                   <div class="row" id="msca-tc">
                       <div class="col-xs-12">
                       <div class="wb-tabs">
@@ -248,7 +248,6 @@
 					  </div>
                 </div>
                   </span>
-                          <div id="def-preFooter"></div>
                           <script type="text/javascript">var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
 					cdnEnv: "prod",dateModified: "2019-06-29",screenIdentifier: "MSCA M 001",showPostContent: false,
