--- a/scenarioA/services/my-account/MSCA/lobby-redesign.html
+++ b/scenarioA/services/my-account/MSCA/lobby-redesign.html
@@ -85,6 +85,22 @@
                     </div>
                     </div>
                 </div>
+					<br />
+					<section class="home-most-requested well well-sm brdr-0">
+	<div class="container">
+		<h2 class="mrgn-tp-md">Most requested</h2>
+		<ul class="wb-eqht list-unstyled mrgn-tp-md mrgn-bttm-sm lst-spcd-2 list-responsive">
+			<li><a href="/en/government/sign-in-online-account.html">Sign in to an account</a></li>
+			<li><a href="/en/services/benefits/ei.html">Employment Insurance and leave</a></li>
+			<li><a href="/en/services/benefits/publicpensions.html">Public pensions (<abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Old Age Security">OAS</abbr>)</a></li>
+			<li><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">Get a passport</a></li>
+			<li><a href="http://weather.gc.ca/?&amp;wb48617274=F4EE897A">Weather</a></li>
+			<li><a href="/en/government/grants-funding.html">Grants and funding</a></li>
+			<li><a href="/en/government/change-address.html">Change your address</a></li>
+			<li><a href="/en/services/benefits/education/student-aid.html">Student aid</a></li>
+		</ul>
+	</div>
+</section>
                   <div id="msca-home">
                  <!-- <div class="row" id="msca-ic">
                       <div class="wb-eqht">
@@ -134,6 +150,7 @@
                     </div>
                     </div>
 					-->
+					  
 					  <h2>Service Canada account services</h2>
                   <div class="row" id="msca-tc">
                       <div class="col-xs-12">
