--- a/scenarioA/services/my-account/MSCA/lobby-redesign.html
+++ b/scenarioA/services/my-account/MSCA/lobby-redesign.html
@@ -90,14 +90,11 @@
 	<div class="container">
 		<h2 class="mrgn-tp-md">Most requested</h2>
 		<ul class="wb-eqht list-unstyled mrgn-tp-md mrgn-bttm-sm lst-spcd-2 list-responsive">
-			<li><a href="/en/government/sign-in-online-account.html">Sign in to an account</a></li>
-			<li><a href="/en/services/benefits/ei.html">Employment Insurance and leave</a></li>
-			<li><a href="/en/services/benefits/publicpensions.html">Public pensions (<abbr title="Canada Pension Plan">CPP</abbr> and <abbr title="Old Age Security">OAS</abbr>)</a></li>
-			<li><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">Get a passport</a></li>
-			<li><a href="http://weather.gc.ca/?&amp;wb48617274=F4EE897A">Weather</a></li>
-			<li><a href="/en/government/grants-funding.html">Grants and funding</a></li>
-			<li><a href="/en/government/change-address.html">Change your address</a></li>
-			<li><a href="/en/services/benefits/education/student-aid.html">Student aid</a></li>
+			<li><a href="/en/government/sign-in-online-account.html">View my EI status and correspondence</a></li>
+			<li><a href="/en/services/benefits/ei.html">View my EI payment information</a></li>
+			<li><a href="/en/services/benefits/publicpensions.html">Complete my EI report online</a></li>
+			<li><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">View my latest EI claim</a></li>
+			<li><a href="http://weather.gc.ca/?&amp;wb48617274=F4EE897A">View my Records of Employment</a></li>
 		</ul>
 	</div>
 </section>
