--- a/scenarioA/services/my-account/MSCA/lobby-redesign.html
+++ b/scenarioA/services/my-account/MSCA/lobby-redesign.html
@@ -89,12 +89,13 @@
 					<section class="home-most-requested well well-sm brdr-0">
 	<div class="container">
 		<h2 class="mrgn-tp-md">Most requested</h2>
-		<ul class="wb-eqht list-unstyled mrgn-tp-md mrgn-bttm-sm lst-spcd-2 list-responsive">
-			<li><a href="/en/government/sign-in-online-account.html">View my EI status and correspondence</a></li>
-			<li><a href="/en/services/benefits/ei.html">View my EI payment information</a></li>
-			<li><a href="/en/services/benefits/publicpensions.html">Complete my EI report online</a></li>
+		<ul class="wb-eqht list-unstyled mrgn-tp-md mrgn-bttm-md list-responsive">
+			<li><a href="/en/government/sign-in-online-account.html">View my EI status</a></li>
+			<li><a href="/en/services/benefits/ei.html">View my EI payment <br />information</a></li>
 			<li><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">View my latest EI claim</a></li>
-			<li><a href="http://weather.gc.ca/?&amp;wb48617274=F4EE897A">View my Records of Employment</a></li>
+			<li><a href="http://weather.gc.ca/?&amp;wb48617274=F4EE897A">View my Records of <br />Employment</a></li>
+			<li><a href="/en/services/benefits/publicpensions.html">Complete my EI report <br />online</a></li>
+			
 		</ul>
 	</div>
 </section>
