--- a/scenarioA/services/my-account/MSCA/lobby-redesign.html
+++ b/scenarioA/services/my-account/MSCA/lobby-redesign.html
@@ -88,7 +88,7 @@
 					<br />
 					<section class="home-most-requested well well-sm brdr-0">
 	<div class="container">
-		<h2 class="mrgn-tp-md">Most requested</h2>
+		<h2 class="h3 mrgn-tp-md">Most requested</h2>
 		<ul class="wb-eqht list-unstyled mrgn-tp-md mrgn-bttm-md list-responsive">
 			<li><a href="/en/government/sign-in-online-account.html">View my EI status</a></li>
 			<li><a href="/en/services/benefits/ei.html">View my EI payment <br />information</a></li>
