--- a/scenarioA/services/my-account/MSCA/lobby-TBS.html
+++ b/scenarioA/services/my-account/MSCA/lobby-TBS.html
@@ -74,8 +74,9 @@
 
   <nav class="gcweb-v2" typeof="SiteNavigationElement" id="brand-container-cra" style="background-color: #E3CFD4 !important;">
   <div class="container">
-  <h2 id="brand-container-cra-h2" style="color: #333 !important;">Service Canada</h2>
-  <a class="btn btn-default btn-login-logout" href="../employment-social-development/services/my-account/access.html">Sign out</a>
+  <h2 id="brand-container-cra-h2" style="color: #333 !important;">Service Canada<div align="right">
+		  <a class="btn btn-default btn-login-logout" href="../employment-social-development/services/my-account/access.html">Sign out</a></div></h2>
+	  
   </div><!-- container -->
   </nav>
 
