--- a/scenarioA/services/my-account/MSCA/lobby-redesign.html
+++ b/scenarioA/services/my-account/MSCA/lobby-redesign.html
@@ -185,6 +185,7 @@
                                   <li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/ei-ae/meiio-mraed_II/Pages/MyCurrentClaim.aspx?prov=13">Latest claim</a></li>
                                   <li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/ei-ae/meiio-mraed_II/Pages/MyPastClaims.aspx?prov=13">Past claim</a></li>
                                   <li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/ei-ae/meiio-mraed_II/Pages/MyRoeList.aspx?prov=13">Records of Employment</a></li>
+									  <li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/faces/oracle/webcenter/portalapp/pages/message-centre.jspx">eForms</a></li>
                                   <li><a href="http://www.servicecanada.gc.ca/cgi-bin/op-so/msca/redirection.asp?linkmsca=/105e.html">EI Publications <span class="glyphicon glyphicon-new-window"></span></a></li>
                                   <li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/faces/oracle/webcenter/portalapp/pages/self-ei.jspx">Agreement status (self-employed)</a></li>
                                   <li><a href="https://srv241-s2.lab.hrdc-drhc.gc.ca/msca-mdsc/msca_eq_pl_mlamp/proxy/index/256">Provide new information regarding my claim</a></li>
