--- a/scenarioA/services/my-account/MSCA/lobby-redesign-fr.html
+++ b/scenarioA/services/my-account/MSCA/lobby-redesign-fr.html
@@ -255,7 +255,7 @@
           <h2 class="mrgn-tp-md">Autres services</h2>
             <section class="well">
                 <h2 class="h3 mrgn-tp-0">Agence du revenu du Canada</h2>
-                <p>Voir vos renseignements fiscaux, tels que des déclarations de revenus, le solde du compte, les REER, CELI et des autres avantages fiscaux (par exemple : Prestation canadienne pour enfants). Vous n’avez pas à vous reconnecter.</p>
+                <p>Visitez votre compte de l'Agence du revenu du Canada pour consulter vos informations fiscales, telles que vos déclarations, vos crédits d'impôt, le solde de votre compte, vos REER, vos CELI et gérer vos prestations canadiennes pour enfants.</p>
                   <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Passer à l'Agence du revenu du Canada</a>
             </section>
           </aside>
