--- a/scenarioA/services/my-account/MSCA/lobby-redesign.html
+++ b/scenarioA/services/my-account/MSCA/lobby-redesign.html
@@ -255,7 +255,7 @@
 					  <aside style="padding-left:0px;">
           <h2 class="mrgn-tp-md">Other services</h2>
             <section class="well">
-                <h2 class="h3 mrgn-tp-0">Access your income tax information </h2>
+                <h2 class="h3 mrgn-tp-0">Canada Revenue Agency</h2>
                 <p> Visit your Canada Revenue Agency account to view your income tax information, such as tax returns, tax credits, your account balance, RRSPs, TFSAs and manage your Canada Child Benefits.</p>
                 <p>No need to log in again.</p>
                   <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Switch to Canada Revenue Agency</a>
