--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -94,8 +94,8 @@
   </section>
 	<div class="row">
   <div class="col-md-6">
-    <aside style="padding-left:0px;">
-      <h2 class="mrgn-tp-md">Other services</h2>
+    <aside style="padding-top:40px;">
+      <h2>Other services</h2>
       <section>
 		  <div class="panel panel-default">
   <div class="panel-body">
