--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -86,10 +86,10 @@
   <section>
     <h2 class="mrgn-tp-md">Our services and information</h2>
     <div>
-		<a class="col-md-5 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href=""><div class="h3 mrgn-tp-md text-center">Employment Insurance</div></a>
+		<a class="col-md-5 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/landing-page-ei.html"><div class="h3 mrgn-tp-md text-center">Employment Insurance</div></a>
 	  </div>
 		<div>
-			<a class=" col-md-5 col-md-offset-1 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href=""><div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div></a> 
+			<a class=" col-md-5 col-md-offset-1 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/landing-page-cpp-oas.html"><div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div></a> 
 	  </div>
   </section>
 	<div class="row">
