--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -146,7 +146,10 @@
         </a> <a href="#a1-1" class="list-group-item">CPP Application</a> <a href="#a1-2" class="list-group-item">OAS/GIS Pension Application</a> <a href="#a1-3" class="list-group-item">Personal information</a> <a href="#a1-4" class="list-group-item">Payment and direct deposit</a> <a href="#a1-5" class="list-group-item">CPP Contributions and Benefits</a> <a href="#a1-6" class="list-group-item">CPP Child-Rearing Provision</a> <a href="#a1-7" class="list-group-item">Tax information</a> <a href="#a1-8" class="list-group-item">Consent on my behalf</a> </div>
       <div class="list-group col-md-3"> <a class="list-group-item active">
         <h4 class="list-group-item-heading">Help and Support</h4>
-        </a> <a href="#a1-1" rel="external" class="list-group-item">CPP/OAS Applications</a> <a href="#a1-2" rel="external" class="list-group-item">Related services and information</a> <a href="#a1-3" class="list-group-item">Contact Us</a> </div>
+        </a> 
+		  <a href="" rel="external" class="list-group-item">CPP/OAS Applications</a> 
+		  <a href="" rel="external" class="list-group-item">Related services and information</a> 
+		  <a href="" class="list-group-item">Contact Us</a> </div>
     </div>
   </section>
   </aside>
