--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -71,9 +71,10 @@
 <main class="container" property="mainContentOfPage" role="main"> <span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
   <h1 class="wb-inv" id="wb-cont" property="name">My Service Canada Account</h1>
   <section>
-    <div class="row">
+    
       <h1 property="name" id="wb-cont" dir="ltr">Employment Insurance</h1>
-      <div class="col-md-9">
+      <div class="row">
+		  <div class="col-md-9">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod justo eget ligula porttitor, at imperdiet quam elementum. Suspendisse aliquet purus ante, vitae molestie dui euismod vitae. Curabitur efficitur nibh turpis.</p>
         <div class="panel panel-default">
           <div class="panel-body">
@@ -152,9 +153,12 @@
       <div class="list-group col-md-3"> <a class="list-group-item active">
         <h4 class="list-group-item-heading">On this page</h4>
         </a> <a href="#a1-1" class="list-group-item">Claims and application status</a> <a href="#a1-2" class="list-group-item">Personal information</a> <a href="#a1-3" class="list-group-item">Payment and direct deposit</a> <a href="#a1-4" class="list-group-item">Alert me</a> <a href="#a1-5" class="list-group-item">Records of Employment</a> <a href="#a1-6" class="list-group-item">Tax slips</a> <a href="#a1-7" class="list-group-item">eForms</a> <a href="#a1-8" class="list-group-item">Self-employed</a> <a href="#a1-9" class="list-group-item">EI Report</a> </div>
-      <div class="list-group col-md-3"> <a class="list-group-item active">
-        <h4 class="list-group-item-heading">Help and Support</h4>
-        </a> <a href="#a1-1" rel="external" class="list-group-item">EI Forms</a> <a href="#a1-2" rel="external" class="list-group-item">Related services and information</a> <a href="#a1-3" class="list-group-item">Contact Us</a> </div>
+      <div class="list-group col-md-3"> 
+		  <a class="list-group-item active"><h4 class="list-group-item-heading">Help and Support</h4>
+        </a> 
+		  <a href="#" rel="external" class="list-group-item">EI Forms</a> 
+		  <a href="" rel="external" class="list-group-item">Related services and information</a> 
+		  <a href="#" class="list-group-item">Contact Us</a> </div>
     </div>
   </section>
   </aside>
