--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -54,7 +54,7 @@
                                 cdnEnv : "prod",
                                 appName : [{
                                         text : "My Service Canada Account",
-                                        href : "https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/faces/oracle/webcenter/portalapp/pages/home.jspx"
+                                        href : "/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html"
                                 }],appSettings : [{ 
                                         href: "https://srv241-s2.lab.hrdc-drhc.gc.ca/ecas-seca/rascl_sys2/SCL/SQE.aspx?Lang=eng"
                                     }],signOut: [{ href: "https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/logout" }],
