--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -76,19 +76,13 @@
                         });</script><span id="pageTemplate:pt_pg_content" class="af_panelGroupLayout">
 <main class="container" property="mainContentOfPage" role="main"> <span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
   <h1 class="wb-inv" id="wb-cont" property="name">My Service Canada Account</h1>
-	<nav id="wb-bc" property="breadcrumb">
-            <h2>You are here:</h2>
-            <div class="container" style="padding-left: 15px !important;">
-                <ol class="breadcrumb">
-                    <li class="visible-md visible-lg no-break-breadcrumb cust-breadcrumb"><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">
-  Home</a></li>
-                    
 
-                    <li class="cust-breadcrumb"><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Employment Insurance</a></li>
-
-                </ol>
-            </div>
-        </nav>
+	<nav id="wb-bc" property="breadcrumb"><h2 class="wb-inv">You are here:</h2><div class="container"><ol class="breadcrumb">
+<li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">Home</a></li>
+<li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Employment Insurance</a></li>
+</ol></div></nav>
+	
+	
   <section>
     
       <h1 property="name" id="wb-cont" dir="ltr">Employment Insurance</h1>
