--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -76,7 +76,7 @@
                         });</script><span id="pageTemplate:pt_pg_content" class="af_panelGroupLayout">
 <main class="container" property="mainContentOfPage" role="main"> <span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
   <h1 class="wb-inv" id="wb-cont" property="name">My Service Canada Account</h1>
-
+<div class="row">
 	<nav id="wb-bc" property="breadcrumb"><h2 class="wb-inv">You are here:</h2><div class="container"><ol class="breadcrumb">
 <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">Home</a></li>
 <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Employment Insurance</a></li>
@@ -86,12 +86,17 @@
   <section>
     
       <h1 property="name" id="wb-cont" dir="ltr">Employment Insurance</h1>
-      <div class="row">
+      
+	  <section class="alert alert-warning">
+  <h2>Outage message</h2>
+  <p>Please Insert the outage message here.</p>
+</section>
+
 		  <div class="col-md-9">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod justo eget ligula porttitor, at imperdiet quam elementum. Suspendisse aliquet purus ante, vitae molestie dui euismod vitae. Curabitur efficitur nibh turpis.</p>
         <div class="panel panel-default">
           <div class="panel-body">
-            <h3 id="a1-1" class="mrgn-tp-0">Claims and application status</h3>
+            <h2 id="a1-1" class="h3 mrgn-tp-0">Claims and application status</h2>
             <p>The claims and application status is used to view your current, latest and past claim(s).</p>
             <button type="button" class="btn btn-default">View claim/application status</button>
             <button type="button" class="btn btn-default">View latest claim</button>
