--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -76,7 +76,7 @@
                         });</script><span id="pageTemplate:pt_pg_content" class="af_panelGroupLayout">
 <main class="container" property="mainContentOfPage" role="main"> <span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
   <h1 class="wb-inv" id="wb-cont" property="name">My Service Canada Account</h1>
-<div class="row">
+
 	<nav id="wb-bc" property="breadcrumb"><h2 class="wb-inv">You are here:</h2><div class="container"><ol class="breadcrumb">
 <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">Home</a></li>
 <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Employment Insurance</a></li>
@@ -84,12 +84,12 @@
 	
 	
   <section>
-    
+ <div class="row">   
       <h1 property="name" id="wb-cont" dir="ltr">Employment Insurance</h1>
       
 	  <section class="alert alert-warning">
-  <h2 class="h3">Outage message</h2>
-  <p>Please Insert the outage message here.</p>
+  <h2 class="h3">Attention</h2>
+  <p>Please be advised that this service will be unavailable from 6:00 a.m. to 8:00 a.m. on Sunday, March 17, 2019 (Eastern Time) to permit system maintenance. We apologize for any inconvenience. </p>
 </section>
 
 		  <div class="col-md-9">
