--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -164,12 +164,46 @@
           </div>
         </div>
       </div>
-      <div class="list-group col-md-3"> <a class="list-group-item active">
-        <h4 class="list-group-item-heading">On this page</h4>
-        </a> <a href="#a1-1" class="list-group-item">Claims and application status</a> <a href="#a1-2" class="list-group-item">Personal information</a> <a href="#a1-3" class="list-group-item">Payment and direct deposit</a> <a href="#a1-4" class="list-group-item">Alert me</a> <a href="#a1-5" class="list-group-item">Records of Employment</a> <a href="#a1-6" class="list-group-item">Tax slips</a> <a href="#a1-7" class="list-group-item">eForms</a> <a href="#a1-8" class="list-group-item">Self-employed</a> <a href="#a1-9" class="list-group-item">EI Report</a> </div>
-      <div class="list-group col-md-3"> <a class="list-group-item active">
-        <h4 class="list-group-item-heading">Help and Support</h4>
-        </a> <a href="#" rel="external" class="list-group-item">EI Forms</a> <a href="" rel="external" class="list-group-item">Related services and information</a> <a href="#" class="list-group-item">Contact Us</a> </div>
+		
+		
+		<div class="list-group col-md-3">
+			<div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading"><strong>On this page</strong></div>
+  <div class="panel-body">
+  </div>
+
+  <!-- List group -->
+  <ul class="list-group">
+    <li class="list-group-item"><a href="#a1-1">Claims and application status</a></li>
+	  <li class="list-group-item"><a href="#a1-1">Personal information</a></li>
+	  <li class="list-group-item"><a href="#a1-1">Payment and direct deposit</a></li>
+	  <li class="list-group-item"><a href="#a1-1">Alert me</a></li>
+	  <li class="list-group-item"><a href="#a1-1">Records of Employment</a></li>
+	  <li class="list-group-item"><a href="#a1-1">Tax slips</a></li>
+	  <li class="list-group-item"><a href="#a1-1">eForms</a></li>
+	  <li class="list-group-item"><a href="#a1-1">Self-employed</a></li>
+	  <li class="list-group-item"><a href="#a1-1">EI Report</a></li>
+  </ul>
+</div>
+
+						<div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading"><strong>Help and Support</strong></div>
+  <div class="panel-body">
+  </div>
+
+  <!-- List group -->
+  <ul class="list-group">
+    <li class="list-group-item"><a href="">EI Forms</a></li>
+	  <li class="list-group-item"><a href="">Related services and information</a></li>
+	  <li class="list-group-item"><a href="">Contact us</a></li>
+  </ul>
+</div>
+		
+		</div>
+		
+
     </div>
   </section>
   </aside>
